# fyp-architecture

./: .gitignore  main.py  pyproject.toml
child_gender/: .gitignore  compare.py  find_bbox_errors.py  pg2_lib.py  pg2_prompt.ipynb  pg2_prompt.py  preprocess.py  remove_similar_images.py  similar_images.py  split_images.py  train-runpod.ipynb  train-runpod.py  train.ipynb  validate_annotations.py  visualize_annotations.py  visualize_similars.html  visualize_similars.py
cvengine/: .gitignore  config.py  csv_logger.py  cvengine.proto  cvengine_pb2.py  cvengine_pb2.pyi  cvengine_pb2_grpc.py  detection_worker.py  server.py  service.py  test_client.py  update-grpc.ps1
labcolor/: extracolormath.py  generate_palette.py  palette.csv  visualize_palette.html  visualize_palette.py
logs/: cvengine.md
utils/: py_to_ipynb.py
